fix header nav and footer fix category page

--- a/src/Web/Pages/_ViewImports.cshtml
+++ b/src/Web/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-@using DamaShopWeb.Web
-@using DamaShopWeb.Web.ViewModels
+@using Web
+@using Web.ViewModels
 @using Microsoft.AspNetCore.Identity
 @using Infrastructure.Identity
-@namespace DamaShopWeb.Web.Pages
+@namespace Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers 
