--- a/src/Web/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/Pages/Components/Menu/Default.cshtml
@@ -1,7 +1,8 @@
-﻿@using DamaShopWeb.Web.ViewModels
+﻿@using Web.ViewModels
 @model MenuComponentViewModel
 
-<ul class="navbar-nav mx-auto w-100 justify-content-end">
+
+<ul class="navbar-nav">
     @foreach (var item in Model.Left)
     {
         if (item.Childs.Count > 0)
@@ -28,13 +29,13 @@
 
     }
 </ul>
-<div class="brand-image justify-content-center text-center">
-    <a href="https://www.damanojornal.com" class="navbar-brand">
-        <img src="~/images/brand.png" width="137px" alt="eShop On Web" />
-    </a>
+<a href="https://www.damanojornal.com" class="navbar-brand brand-image">
+    <img src="~/images/brand.png" width="137px" alt="Dama no Jornal" />
     <h1>A Loja</h1>
-</div>
-<ul class="navbar-nav mx-auto w-100">
+</a>
+
+<ul class="navbar-nav">
+
     @foreach (var item in Model.Right)
     {
         if (item.Childs.Count > 0)
