--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -16,6 +16,12 @@
     src: url("../fonts/LilyScriptOne-Regular.ttf") format("truetype");
 }
 
+@font-face {
+    font-family: Quicksand;
+    font-weight: 400;
+    src: url("../fonts/Quicksand-Regular.ttf") format("truetype");
+}
+
 
 html,
 body {
@@ -129,17 +135,31 @@ h2 {
     padding: 0px 0px 40px 0px;
 }
 
+.width-200 {
+    width:200px;
+}
+.backToHome {
+    opacity: .9;
+    padding-left: 10px;
+    font: 400 14px Quicksand;
+}
+
 @media screen and (max-width: 992px) {
     .brand-image {
         display: none;
     }
-    .ul-social {
-        display:none;
+    .width-200 {
+        display: none;
     }
     .separator {
         width: 250px;
     }
-    
+    .footer-img img{
+        width: 200px;
+    }
+    .footer-text{
+        display:none;
+    }
 }
 @media screen and (min-width: 992px) {
     #brand-mobile-image {
@@ -149,12 +169,27 @@ h2 {
         width: 395px;
         height: 26px;
     }
+    .footer-text-mobile{
+        display:none
+    }
 }
 
-.navbar-dark .navbar-nav a:hover {
+.abs-center-x {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+
+ 
+.navbar-dark .navbar-nav .nav-item a:hover {
     border-bottom: 3px solid #fff;
     color: #fff;
 }
+
+
+
 .navbar-dark .navbar-nav .nav-link {
     color:#fff;
 }
@@ -200,7 +235,7 @@ h2 {
     padding-top: 30px;
 }
 .footer-link{
-    width: 300px;
+    width: 100%;
     padding: 5px 5px;
 }
 .footer-link a,
