--- a/src/Web/Pages/Category/Index.cshtml
+++ b/src/Web/Pages/Category/Index.cshtml
@@ -7,3 +7,33 @@
 
 <h2>@Model.CategoryName</h2>
 
+<div class="container">
+    <div class="row">
+        @foreach (var item in Model.CategoryModel.CatalogTypes)
+        {
+            <div class="col-md-3">
+                <a href="tipo/@item.Item1">@item.Item2</a>
+            </div>
+        }
+    </div>
+</div>
+
+@if (Model.CategoryModel.CatalogModel.NewCatalogItems.Any())
+{
+    <div class="news-heading text-center">
+        <h2>Novidades</h2>
+        <img class="separator" src="~/images/coração-rosa.png" />
+    </div>
+
+    <div class="container">
+
+        <div class="esh-catalog-items row">
+            @foreach (var catalogItem in Model.CategoryModel.CatalogModel.NewCatalogItems)
+            {
+                <div class="esh-catalog-item col-md-3">
+                    @Html.Partial("_product", catalogItem)
+                </div>
+            }
+        </div>
+    </div>
+}
