--- a/src/Web/Pages/Category/Index.cshtml
+++ b/src/Web/Pages/Category/Index.cshtml
@@ -2,20 +2,18 @@
 @using Web.Pages.Category
 @model IndexModel
 @{
-    ViewData["Title"] = @Model.CategoryName;
+    ViewData["Title"] = @Model.CategoryModel.CategoryName;
 }
 
-<h2>@Model.CategoryName</h2>
+<h2>@Model.CategoryModel.CategoryName</h2>
 
-<div class="container">
-    <div class="row">
-        @foreach (var item in Model.CategoryModel.CatalogTypes)
-        {
-            <div class="col-md-3">
-                <a href="tipo/@item.Item1">@item.Item2</a>
-            </div>
-        }
-    </div>
+<div class="row">
+    @foreach (var item in Model.CategoryModel.CatalogTypes)
+    {
+        <div class="col-md-3 bg-dark">
+            <a href="@Model.CategoryModel.CategoryUrlName/@item.Item1">@item.Item2</a>
+        </div>
+    }
 </div>
 
 @if (Model.CategoryModel.CatalogModel.NewCatalogItems.Any())
