--- a/src/Web/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/Pages/Components/Menu/Default.cshtml
@@ -41,10 +41,10 @@
         if (item.Childs.Count > 0)
         {
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="@DamaShopWeb.Web.Utils.RemoveDiacritics(item.Name).Replace(" ","-").ToLower()" aria-haspopup="true" aria-expanded="false">
                     @item.Name
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu">
                     @foreach (var child in item.Childs)
                     {
                         <a class="dropdown-item" href="@DamaShopWeb.Web.Utils.RemoveDiacritics(child.Name).Replace(" ","-").ToLower()">@child.Name</a>
