--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -208,6 +208,14 @@ h2 {
     border: 3px solid #fff !important;
     background-color: transparent;
 }
+.dropdown > .dropdown-toggle:active {
+    /*Without this, clicking will make it sticky*/
+    pointer-events: none;
+}
+
+.dropdown:hover > .dropdown-menu {
+    display: block;
+}
 
 .social-links {
     text-align: center;    
