product create/edit changes (add descriptions) delete product images when deleting product

--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -27,13 +27,13 @@
             @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.CatalogType.Code)
+            @Html.DisplayFor(model => model.ProductModel.DisplayCatalogTypeName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.CatalogIllustrationId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.CatalogIllustration.Code)
+            @Html.DisplayFor(model => model.ProductModel.DisplayIllustrationName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Price)
