--- a/src/Backoffice/Pages/ProductType/Create.cshtml
+++ b/src/Backoffice/Pages/ProductType/Create.cshtml
@@ -24,8 +24,9 @@
                 <span asp-validation-for="ProductTypeModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductTypeModel.CategoryId" class="control-label"></label>
-                <select asp-for="ProductTypeModel.CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <label asp-for="ProductTypeModel.CategoriesId" class="control-label"></label>
+                <select asp-for="ProductTypeModel.CategoriesId" class="form-control" asp-items="ViewBag.CategoryId" multiple="multiple"></select>
+                <span asp-validation-for="ProductTypeModel.CategoriesId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
@@ -40,4 +41,10 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function() {
+            $('#ProductTypeModel_CategoriesId').select2();
+        });
+    </script>
 }
