--- a/src/Backoffice/Pages/ProductType/Index.cshtml
+++ b/src/Backoffice/Pages/ProductType/Index.cshtml
@@ -19,9 +19,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ProductTypesModel[0].Description)
                 </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductTypesModel[0].CategoryId)
-            </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProductTypesModel[0].CategoriesName)
+                </th>
             <th></th>
         </tr>
     </thead>
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
+                @string.Join(",", item.CategoriesName)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Editar</a> |
