--- a/src/Backoffice/Pages/Index.cshtml
+++ b/src/Backoffice/Pages/Index.cshtml
@@ -10,39 +10,31 @@
 </div>
 <div class="row">
     <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/images/category.jpg" alt="...">
-            <div class="caption">
-                <h3>Categorias</h3>                
-                <p><a asp-page="/Category/Index" class="btn btn-primary" role="button">Ver</a></p>
+        <a asp-page="/Category/Index">
+            <div class="thumbnail">
+                <img src="~/images/category.jpg" alt="Categorias">
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/images/productType.jpg" alt="...">
-            <div class="caption">
-                <h3>Tipos de Produto</h3>
-                <p><a asp-page="/ProductType/Index" class="btn btn-primary" role="button">Ver</a></p>
+        <a asp-page="/ProductType/Index">
+            <div class="thumbnail">
+                <img src="~/images/productType.jpg" alt="Tipos de Produto">
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/images/illustration.jpg" alt="...">
-            <div class="caption">
-                <h3>Ilustrações</h3>                
-                <p><a asp-page="/Illustrations/Index" class="btn btn-primary" role="button">Ver</a></p>
+        <a asp-page="/Illustrations/Index">
+            <div class="thumbnail">
+                <img src="~/images/illustration.jpg" alt="Ilustrações">
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-md-3">
-        <div class="thumbnail">
-            <img src="~/images/product.jpg" alt="...">
-            <div class="caption">
-                <h3>Produtos</h3>
-                <p><a asp-page="/Products/Index" class="btn btn-primary" role="button">Ver</a></p>
+        <a asp-page="/Products/Index">
+            <div class="thumbnail">
+                <img src="~/images/product.jpg" alt="Produtos">
             </div>
-        </div>
+        </a>
     </div>
 </div>
