--- a/src/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/src/Backoffice/Pages/ProductType/Delete.cshtml
@@ -30,6 +30,12 @@
         <dd>
             @string.Join(", ", Model.ProductTypeModel.CategoriesName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
+        </dt>
+        <dd>
+            <img src="@Model.ProductTypeModel.PictureUri" class="img-responsive" />
+        </dd>
     </dl>
     
     <form method="post">
