--- a/src/Web/Pages/_Layout.cshtml
+++ b/src/Web/Pages/_Layout.cshtml
@@ -97,7 +97,7 @@
 
 
     <nav class="navbar navbar-dark navbar-expand-md justify-content-between background_gradient">
-        <a href="/" class="pl-5 width-200"><i class="fas fa-arrow-left"></i><span class="backToHome">Votar ao inicio</span></a>
+        <a href="/" class="pl-3 pl-lg-5 backToHome"><i class="fas fa-arrow-left"></i><span>Votar ao inicio</span></a>
         <a id="brand-mobile-image" class="navbar-brand" href="https://www.damanojornal.com">
             <img src="~/images/brand.png" width="50px;" alt="Dama no Jornal" />
         </a>
@@ -109,7 +109,7 @@
             @await Component.InvokeAsync("Menu")
             
         </div>
-        <ul class="nav navbar-nav flex-row pr-5 width-200">
+        <ul class="nav navbar-nav flex-row pr-3 pr-lg-5">
             <li class=""><a class="nav-link" href=""><i class="fab fa-facebook-f fa-inverse"></i></a></li>
             <li class=""><a class="nav-link" href=""><i class="fab fa-instagram"></i></a></li>
             <li class=""><a class="nav-link" href=""><i class="fab fa-google-plus-g"></i></a></li>
