--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -83,21 +83,16 @@ select::-ms-expand {
     font-size: 12px;
 }
 
-/*a,
+a,
 a:active,
-a:hover,
 a:visited {
-    color: #000;
-    text-decoration: none;
+    color: #000000;
+    text-decoration: underline;
     transition: color 0.35s;
 }
-
-    a:hover,
-    a:active {
-        color: #75B918;
-        transition: color 0.35s;
-    }*/
-
+a:hover {
+    color: Highlight;
+}
 h1 {
     color: #000000;
     font-family: "Lily Script One", Sans-serif;
@@ -138,10 +133,20 @@ h2 {
 .width-200 {
     width:200px;
 }
-.backToHome {
+
+
+.backToHome span {
     opacity: .9;
     padding-left: 10px;
     font: 400 14px Quicksand;
+    color: #fff;
+}
+.backToHome,
+.backToHome:active,
+.backToHome:visited,
+.backToHome:hover {
+    color: #fff;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 992px) {
@@ -254,13 +259,12 @@ h2 {
     padding: 5px 5px;
 }
 .footer-link a,
-    a:active,
-    a:hover,
-    a:visited {
-        color: #fff;
-        text-decoration: none;
-        
-    }
+.footer-link a:active,
+.footer-link a:hover,
+.footer-link a:visited {
+    color: #fff;
+    text-decoration: none;
+}
 .footer-link:hover {
     border: 1px solid #fff;
     transition: color 0.35s;
