--- a/src/Web/Pages/Product/Index.cshtml
+++ b/src/Web/Pages/Product/Index.cshtml
@@ -4,54 +4,67 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="row">
+<div class="row mt-5">
     <div class="col-6">
         <img src="http://via.placeholder.com/600x533" class="img-fluid" height="533" />
     </div>
     <div class="col-6">
-        <h2 class="text-center">Titulo do produto</h2>
-        <div class="row justify-content-center">
-            <div class="esh-catalog-price">
+        <div class="dama-product-title">Titulo do produto</div>
+        <div class="row justify-content-center mt-3">
+            <div class="dama-product-price">
                 <span>13.00</span>
             </div>
-            &mdash;
-            <div class="esh-catalog-price">
+            @*<div class="my-auto pl-1 pr-1">&#8211;</div>
+            <div class="dama-product-price">
                 <span>15.00</span>
-            </div>
+            </div>*@
         </div>
-        <img width="395" height="26" src="~/images/coração-rosa.png" />
-        <p>Descrição do produto</p>
-        <div class="form-control row">
+        <div class="text-center mt-3 mb-3">
+            <img width="180" src="~/images/coração-rosa.png" />
+        </div>
+
+        <p class="dama-product-description mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+        <div class="row dama-product-attr mb-4">
             <label class="col-sm-2 col-form-label">Tamanho</label>
             <div class="col-sm-10">
                 <select class="form-control">
+                    <option>Escolha um tamanho</option>
                     <option>XL</option>
                     <option>M</option>
                 </select>
             </div>
         </div>
         <hr />
-        <div class="form-row">
-            <div class="col-2">
-                <button class="btn">-</button>
-            </div>
-            <div class="col-2">
-                <input type="text" class="form-control" value="1">
-            </div>
-            <div class="col-2">
-                <button class="btn">+</button>
-            </div>
-            <div class="col">
-                <input class="esh-catalog-button" type="submit" value="[ ADD TO BASKET ]" />
+        <div class="btn-group mt-4" role="group">
+            <button type="button" class="btn">-</button>
+            <input type="text" class="form-control col-2 text-center" value="1">
+            <button type="button" class="btn">+</button>
+            <input class="dama-product-add ml-2" type="submit" value="[ ADICIONAR ]" />
+        </div>
+
+        <div class="row dama-product-attr mt-4">
+            <label class="col-sm-2 col-form-label">Ref.:</label>
+            <div class="col-sm-10">
+                <span>CAT_M_001</span>
             </div>
         </div>
 
-        <h4>ReFerencia</h4>
-
-        <div class="row">
-            <span>Categorias</span>
-            <span>Acessorios, Dogs</span>
+        <div class="row dama-product-attr mt-2">
+            <label class="col-sm-2 col-form-label">Categorias:</label>
+            <div class="col-sm-10">
+                <a href="#">Acessórios</a>
+                <a href="#">Dogs</a>
+            </div>
         </div>
+        <div class="row dama-product-attr mt-2">
+            <label class="col-sm-2 col-form-label">Tags:</label>
+            <div class="col-sm-10">
+                <a href="#">Dama em Paris</a>
+                <a href="#">Dama Valentim</a>
+            </div>
+        </div>
+
 
 
     </div>
