--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -17,9 +17,8 @@
 }
 
 @font-face {
-    font-family: Quicksand;
-    font-weight: 400;
-    src: url("../fonts/Quicksand-Bold.ttf") format("truetype");
+    font-family: Quicksand Bold;
+    src: url("../fonts/Quicksand-Regular.ttf") format("truetype");
 }
 
 
@@ -47,9 +46,9 @@ body {
     transform: translate(-50%, -50%);
 }
 
-select::-ms-expand {
+/*select::-ms-expand {
     display: none;
-}
+}*/
 
 @media screen and (min-width: 992px) {
     .form-input {
@@ -200,7 +199,7 @@ h2 {
 
 .navbar-dark .navbar-nav .nav-link {
     color: #fff;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 14px;
     text-decoration: none;
 }
@@ -297,4 +296,53 @@ h2 {
 
 .bannerLink {
     cursor: pointer;
+}
+
+/* Product Page */
+
+.dama-product-title {
+    color: #54595f;
+    font-size: 23px;
+    text-transform: uppercase;
+    text-align: center;
+}
+.dama-product-price {
+    color: #000000;
+}
+.dama-product-price::before {
+    content: '€';
+}
+.dama-product-description {
+    font-size: 14px;
+}
+.dama-product-attr .col-form-label {
+    color: #929292;
+    font-size: 14px;
+}
+.dama-product-attr .form-control{
+    color: #333;
+    font-size: 14px;
+}
+.dama-product-attr span {
+    color: #7a7a7a;
+    font-size: 14px;
+}
+.dama-product-attr a {
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.dama-product-add {
+    background-color: #f5b0b9;
+    border: 0;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 1rem;
+    height: 2rem;
+    transition: all 0.35s;
+    width: 50%;
+}
+.dama-product-add:hover {
+    background-color: #ef7e8e;
+    transition: all 0.35s;
 }
