product page with backend; add prodcut sku

--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.ProductModel.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductModel.ProductSKU)
+            @Html.DisplayNameFor(model => model.ProductModel.Sku)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.ProductSKU)
+            @Html.DisplayFor(model => model.ProductModel.Sku)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.ShowOnShop)
