--- a/src/Backoffice/Pages/Products/Delete.cshtml
+++ b/src/Backoffice/Pages/Products/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Sku)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.Sku)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Name)
         </dt>
         <dd>
