--- a/src/Web/Pages/Product/Index.cshtml
+++ b/src/Web/Pages/Product/Index.cshtml
@@ -1,72 +1,149 @@
 ﻿@page
 @model Web.Pages.Product.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Model.ProductModel.ProductTitle;
 }
 
-<div class="row mt-5">
-    <div class="col-6">
-        <img src="http://via.placeholder.com/600x533" class="img-fluid" height="533" />
+<div class="row mt-md-5">
+    <div class="col-md-6">
+        <div class="row align-items-center">
+            <div class="dama-product-thumbnails col-3 text-center">
+                <a href="#" class="top-arrow"><i class="fas fa-chevron-up"></i></a>
+                <div class="slider-nav">
+                    @*<div><img src="https://via.placeholder.com/100?text=1" class="img-thumbnail"/></div>
+                    <div><img src="https://via.placeholder.com/100?text=2" class="img-thumbnail"/></div>
+                    <div><img src="https://via.placeholder.com/100?text=3" class="img-thumbnail"/></div>
+                    <div><img src="https://via.placeholder.com/100?text=4" class="img-thumbnail"/></div>
+                    <div><img src="https://via.placeholder.com/100?text=5" class="img-thumbnail"/></div>
+                    <div><img src="https://via.placeholder.com/100?text=6" class="img-thumbnail"/></div>*@
+                    @foreach (var item in Model.ProductModel.ProductImagesUri)
+                    {
+                        <div><img src="@item" class="img-thumbnail" alt="Imagem do Produto" /></div>
+                    }
+                </div>
+                <a href="#" class="bottom-arrow"><i class="fas fa-chevron-down"></i></a>
+            </div>
+            <div class="col-12 col-md-9 text-center">
+                <div class="dama-product-title-mobile pt-1 pb-1">@Model.ProductModel.ProductTitle</div>               
+                <div class="slider-for">
+                    @*<div><img src="https://via.placeholder.com/300x300?text=1" class="img-fluid" /></div>
+                    <div><img src="https://via.placeholder.com/300x300?text=2" class="img-fluid" /></div>
+                    <div><img src="https://via.placeholder.com/300x300?text=3" class="img-fluid" /></div>
+                    <div><img src="https://via.placeholder.com/300x300?text=4" class="img-fluid" /></div>
+                    <div><img src="https://via.placeholder.com/300x300?text=5" class="img-fluid" /></div>
+                    <div><img src="https://via.placeholder.com/300x300?text=6" class="img-fluid" /></div>*@
+                    @foreach (var item in Model.ProductModel.ProductImagesUri)
+                    {
+                        <div><img src="@item" class="img-fluid" alt="Imagem do Produto" /></div>
+                    }
+                </div>               
+            </div>
+        </div>
     </div>
-    <div class="col-6">
-        <div class="dama-product-title">Titulo do produto</div>
-        <div class="row justify-content-center mt-3">
+    <div class="col-md-6">
+        <div class="dama-product-title">@Model.ProductModel.ProductTitle</div>
+        <div class="row justify-content-center mt-1 mt-md-3">
             <div class="dama-product-price">
-                <span>13.00</span>
+                <span>@Model.ProductModel.ProductBasePrice</span>
             </div>
             @*<div class="my-auto pl-1 pr-1">&#8211;</div>
-            <div class="dama-product-price">
-                <span>15.00</span>
-            </div>*@
+                <div class="dama-product-price">
+                    <span>15.00</span>
+                </div>*@
         </div>
-        <div class="text-center mt-3 mb-3">
+        <div class="text-center mb-1 mt-md-3 mb-md-3">
             <img width="180" src="~/images/coração-rosa.png" />
         </div>
 
-        <p class="dama-product-description mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="dama-product-description mb-md-4">@Model.ProductModel.ProductDescription</p>
 
-        <div class="row dama-product-attr mb-4">
-            <label class="col-sm-2 col-form-label">Tamanho</label>
-            <div class="col-sm-10">
-                <select class="form-control">
-                    <option>Escolha um tamanho</option>
-                    <option>XL</option>
-                    <option>M</option>
-                </select>
+        @for (int i = 0; i < Model.ProductModel.Attributes.Count; i++)        
+        {
+            <div class="row dama-product-attr mb-md-4">
+                <label class="col-2 col-form-label">@Model.ProductModel.Attributes[i].Label</label>
+                <div class="col-10">
+                    <select asp-for="ProductModel.Attributes[i].Selected" class="form-control" asp-items="Model.ProductModel.Attributes[i].Items">
+                        <option>@Model.ProductModel.Attributes[i].DefaultValue</option>
+                    </select>
+                </div>
             </div>
-        </div>
+        }
+        
         <hr />
-        <div class="btn-group mt-4" role="group">
+        <div class="btn-group mt-md-4" role="group">
             <button type="button" class="btn">-</button>
-            <input type="text" class="form-control col-2 text-center" value="1">
+            <input asp-for="ProductModel.ProductQuantity" class="form-control col-2 text-center">
             <button type="button" class="btn">+</button>
             <input class="dama-product-add ml-2" type="submit" value="[ ADICIONAR ]" />
         </div>
 
-        <div class="row dama-product-attr mt-4">
-            <label class="col-sm-2 col-form-label">Ref.:</label>
-            <div class="col-sm-10">
-                <span>CAT_M_001</span>
+        <div class="row dama-product-attr mt-2 mt-md-4">
+            <label asp-for="ProductModel.ProductSKU" class="col-3 col-form-label" />
+            <div class="col-9">
+                <span>@Model.ProductModel.ProductSKU</span>
             </div>
         </div>
 
-        <div class="row dama-product-attr mt-2">
-            <label class="col-sm-2 col-form-label">Categorias:</label>
-            <div class="col-sm-10">
-                <a href="#">Acessórios</a>
-                <a href="#">Dogs</a>
+        <div class="row dama-product-attr mt-md-2">
+            <label class="col-3 col-form-label">Categorias:</label>
+            <div class="col-9">
+                @foreach (var item in Model.ProductModel.Categories)
+                {
+                    <a href="@item.Uri">@item.Name</a>
+                }
             </div>
         </div>
-        <div class="row dama-product-attr mt-2">
-            <label class="col-sm-2 col-form-label">Tags:</label>
-            <div class="col-sm-10">
-                <a href="#">Dama em Paris</a>
-                <a href="#">Dama Valentim</a>
+        <div class="row dama-product-attr mt-md-2">
+            <label class="col-3 col-form-label">Tags:</label>
+            <div class="col-9">
+                @foreach (var item in Model.ProductModel.Tags)
+                {
+                    <a href="@item.Uri">@item.Name</a>
+                }
             </div>
         </div>
-
-
-
     </div>
-
 </div>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.slider-nav').slick({
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                arrows: true,
+                vertical: true,
+                prevArrow: $('.top-arrow'),
+                nextArrow: $('.bottom-arrow'),
+                focusOnSelect: true,
+                asNavFor: '.slider-for'
+            });
+
+            $('.slider-for').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: false,
+                fade: true,
+                asNavFor: '.slider-nav',
+                responsive: [
+                {
+                    breakpoint: 992,
+                    settings: {                        
+                        infinite: true,
+                        arrows: true,
+                        centerMode: true,
+                    }
+                }]
+            });
+            $('.dama-product-description').on('click touch', function () {
+                if ($(this).css('white-space') == 'normal') {
+                    $(this).css('white-space', 'nowrap');
+                    $(this).css('text-overflow', 'ellipsis');
+                }
+                else if ($(this).css('white-space') == 'nowrap') {
+                    $(this).css('white-space', 'normal');
+                    $(this).css('text-overflow', 'initial');
+                }                
+            });
+        });
+    </script>
+}
