--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -126,7 +126,7 @@ h2 {
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
     margin-top: 0px;
     margin-bottom: 0px;
-    padding: 0px 0px 40px 0px;
+    /*padding: 0px 0px 40px 0px;*/
 }
 
 .width-200 {
@@ -166,6 +166,12 @@ h2 {
     }
     .footer-text{
         display:none;
+    }
+    .social-links{
+        display: none;
+    }
+    .backToHome{
+        display: none;
     }
 }
 @media screen and (min-width: 992px) {
@@ -299,6 +305,45 @@ h2 {
 }
 
 /* Product Page */
+@media screen and (min-width: 992px) {
+    .dama-product-title-mobile {
+        display:none;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .dama-product-title{
+        display: none;
+    }
+    .dama-product-thumbnails {
+        display: none;
+    }
+    .slider-for img {
+        height: 250px;
+        width: auto;        
+    }
+    .dama-product-description {       
+        width: 390px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+.slick-prev {
+    left: 10px !important;
+    z-index: 1;
+}
+
+.slick-next {
+    right: 10px !important;
+}
+
+
+.slider-for img {
+    width: 100%;
+    margin: 0 auto; /* it centers any block level element */
+}
 
 .dama-product-title {
     color: #54595f;
@@ -338,9 +383,9 @@ h2 {
     color: #FFFFFF;
     cursor: pointer;
     font-size: 1rem;
-    height: 2rem;
+    height: 2.5rem;
     transition: all 0.35s;
-    width: 50%;
+    width: 100%;
 }
 .dama-product-add:hover {
     background-color: #ef7e8e;
